* Added support for lazy loading of images ** All images (profile, content) have a placeholder src image by default ** Loads images by setting 'src' value with original image value, stored in 'data-src' ** Upon 'update' or 'scroll' event, iterates through all post items that haven't loaded images, and if visible, loads all images in the item ** Added some basic styles to pending images, so can tell there's something there ** Fixes #33

--- a/assets/scss/aol.liveupdate.scss
+++ b/assets/scss/aol.liveupdate.scss
@@ -40,6 +40,15 @@
             }
             padding: 2px;
             border: 1px solid #CCCCCC;
+            
+            &.lb-pending {
+              width: 50px;
+              height: 50px;
+              background-color: #DDDDDD;
+              @include opacity(0.5);
+            }
+            
+            @include transition(opacity 0.5s);
         }
 
         .lb-img-loading {
@@ -169,6 +178,10 @@
         padding: 0;
         width: auto;
         max-height: 50px;
+        
+        &.lb-pending {
+          background-color: #BBBBBB;
+        }
       }
 
       .lb-blogger-name {
